# medical-appointment-z

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
app/: config.py  main.py
app/graph/: factory.py  graph.py
app/graph/nodes/: canceller_node.py  identify_intent_node.py  message_generator_node.py  scheduler_node.py
app/models/: intent.py  message.py  model_config.py
app/prompts/v1/: identify_intent.py  message_generator.py
app/services/: appointment_service.py  open_router_service.py  open_router_services.py
scripts/: _commit_no_coauthor.py  _run_tests.sh  make_demo_gif.sh  make_demo_gifs.sh  run_api.sh
tests/: conftest.py  test_router_e2e.py
tests/unit/: test_appointment_service.py  test_graph_routing.py  test_intent_schema.py  test_nodes.py  test_open_router_service.py
