[project]
name = "medical-appointment-z"
version = "0.1.0"
description = "Medical appointment scheduling agent (FastAPI + LangGraph)"
authors = [
    { name = "Nonato Sales", email = "nrdesales@gmail.com" }
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "langchain (>=1.3.12,<2.0.0)",
    "langchain-openai (>=1.3.4,<2.0.0)",
    "langgraph (>=1.2.8,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "langgraph-cli[inmem] (>=0.4.30,<0.5.0)",
]
